--- a/mapping_workbench/frontend/src/routes/project-management/ted-rdf-mapping/ted-rdf-mapping.component.scss
+++ b/mapping_workbench/frontend/src/routes/project-management/ted-rdf-mapping/ted-rdf-mapping.component.scss
@@ -5,6 +5,60 @@
     margin-right: auto;
     width: 80%;
     margin-top: 50px;
+
+    .edit-project-content {
+        display: flex!important;
+        width: 30%;
+
+        .edit-card {
+            width: 30%;
+        }
+    }
+    
+    .buttons-modal-container {
+        margin-top: 20px;
+        display: flex;
+        justify-content: space-between;
+    }   
+
+    .editButtonContainer {
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .poject-modal-title {
+        padding-top: 20px;
+        color: red;
+    }
+
+    .project-metadata-fields {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .submitButton {
+        display: flex;
+        align-content: center;
+    }
+    .editFormContainer {
+        display: flex;
+        flex-direction: column;
+               
+        .editDrawerTitles {
+           margin-left: auto;
+           margin-right: auto;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+    }
+    
+
+    .drawerButtons {
+        width: 100%;
+        display: inline-flex;
+        justify-content: space-between;
+    }
     
     .cards-container {
         margin-top: 50px;
@@ -15,6 +69,7 @@
     .project-meta-field {
         display: inline-flex;
         justify-content:center;
+        margin-top: 20px;
         margin-bottom:20px;
         //border-bottom: 1px solid black;
 
@@ -27,9 +82,13 @@
             font-size: 24px;
             width: 80%;
         }
-    }
+    }    
 
     .cardStyle {
         width: 45%;
+    }
+
+    .drawerPaper {
+        justify-content: center;
     }
 }
