--- a/mapping_workbench/frontend/src/routes/authentication/authentication.styles.scss
+++ b/mapping_workbench/frontend/src/routes/authentication/authentication.styles.scss
@@ -2,5 +2,7 @@
     display: flex;
     width: 900px;
     justify-content: space-between;
-    margin: 100px auto;
+    padding-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
 }
