--- a/mapping_workbench/frontend/src/routes/navigation/navigation.component.scss
+++ b/mapping_workbench/frontend/src/routes/navigation/navigation.component.scss
@@ -2,13 +2,15 @@
     height: 70px;
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 25px;
+    justify-content: space-between;   
+    background-color: #F9F6EE;
+    border-bottom: 1px solid #0000001f;
+    position: fixed;
+    z-index:2;    
   
     .logo-container {
       height: 70px;
-      width: 200px;
-      padding: 20px;
+      width: 200px;      
     }
   
     .nav-links-container {
