--- a/mapping_workbench/frontend/src/routes/project-management/project-management.component.scss
+++ b/mapping_workbench/frontend/src/routes/project-management/project-management.component.scss
@@ -1,9 +1,10 @@
 .mapping-workbench-projectManagement-container {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    padding: 20px;
-    margin-top: 40px;
+    flex-direction: column;    
+    padding-top: 110px;
+    padding-left: 200px;
+    
     .page-title, .page-subtitle {
       text-align: center;
     }
