--- a/mapping_workbench/frontend/src/routes/project-management/test-data/test-data.component.scss
+++ b/mapping_workbench/frontend/src/routes/project-management/test-data/test-data.component.scss
@@ -1,4 +1,8 @@
 .mapping-workbench-resources {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
+    
+    .resourceListBoxes {
+        display: flex;
+    }
 }
