--- a/mapping_workbench/frontend/src/routes/navigation/navigation.component.scss
+++ b/mapping_workbench/frontend/src/routes/navigation/navigation.component.scss
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;   
-    background-color: #F9F6EE;
+    background-color: #EBEFFF;
     border-bottom: 1px solid #0000001f;
     position: fixed;
     z-index:2;    
