--- a/mapping_workbench/frontend/src/components/button/button.styles.scss
+++ b/mapping_workbench/frontend/src/components/button/button.styles.scss
@@ -6,8 +6,8 @@
     line-height: 50px;
     padding: 0 35px 0 35px;
     font-size: 15px;
-    background-color: black;
-    color: white;
+    background-color: #111927;
+    color: #9DA4AE;
     text-transform: uppercase;
     font-weight: bolder;
     border: none;
@@ -16,9 +16,9 @@
     justify-content: center;
   
     &:hover {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
+      background-color: #EBEFFF;
+      color: #111927;
+      border: 1px solid #111927;
     }
   
     &.google-sign-in {
