--- a/mapping_workbench/frontend/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/mapping_workbench/frontend/src/components/sign-in-form/sign-in-form.styles.scss
@@ -1,7 +1,14 @@
 .sign-up-container {
     display: flex;
     flex-direction: column;
-    width: 380px;
+    width: 552px;
+    padding-top: 120px;
+    background-color: #ebefff;
+
+    .registerLink {
+        font-weight: bold;
+        color: #004EEB;
+    }
 
     h2 {
         margin: 10px 0;
@@ -9,6 +16,10 @@
 
     .buttons-container {
         display: flex;
-        justify-content: space-between;
+        justify-content: left;
+        
+        .button-container {
+            width: 100%;
+        }
     }
 }
