--- a/mapping_workbench/frontend/src/routes/authentication/authentication.styles.scss
+++ b/mapping_workbench/frontend/src/routes/authentication/authentication.styles.scss
@@ -1,8 +1,10 @@
 .authentication-container {
     display: flex;
-    width: 900px;
-    justify-content: space-between;
+    width: 100%;
+    height:937px;
+    justify-content: center;
     padding-top: 100px;
     margin-left: auto;
     margin-right: auto;
+    background-color: #ebefff;
 }
