--- a/mapping_workbench/backend/package_exporter/resources/templates/validation_summary_report.jinja2
+++ b/mapping_workbench/backend/package_exporter/resources/templates/validation_summary_report.jinja2
@@ -1,12 +1,10 @@
-{% set mapping_suite_identifier = xml_manifestation.xpath_coverage_summary.mapping_suite_identifier %}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% include '_ms_meta_title_pre.jinja2' %}Summary Validation Report</title>
+    <title>Summary Validation Report</title>
     <link href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css">
     <style type="text/css">
         body {
@@ -71,70 +69,27 @@
   </head>
   <body>
 	<h1>Validation Summary Report</h1>
-	<hr>
-    <h2>Report details: </h2>
-    <ul>
-        <li>Date created: {{ created }}</li>
-        <li><b>Mapping suite identifier:</b> {{ mapping_suite_identifier }}</li>
-        {%  if template_metadata.grouping %}
-            <li><b>Grouping:</b> {{ template_metadata.grouping }}</li>
-        {%  endif %}
-        <li><div><hr></div>
-            {%  set nr_notices = notices|length %}
-            {% if nr_notices > 1 %}
-            <b>Notice identifiers ({{ nr_notices }}):</b>
-            <div data-role="collapsible" data-state="collapsed"
-                class="collapsible-wrapper">
-                <h4><a href="#"></a></h4>
-                <div class="ui-collapsible-content">
-                    <ul>
-                    {% for report_data in notices %}
-                        <li>
-                            <a href="file://{{ template_metadata.package_output_path }}/{{ report_data.path }}/{{ report_data.notice_id }}" target="_blank">{{ report_data.notice_id }}</a>
-                        </li>
-                    {% endfor %}
-                    </ul>
-                </div>
-            </div>
-            {% elif nr_notices == 1 %}
-                <b>Notice identifier: {{ notices[0].notice_id }}</b>
-            {% endif %}
-        </li>
-    </ul>
+
     <hr>
-    <h2>XML Manifestation</h2>
-    <p>----------</p>
     <h3>XPATH Coverage Summary</h3>
     <h4>Report details: </h4>
     <ul>
-        <li>Mapping suite identifier: {{ xml_manifestation.xpath_coverage_summary.mapping_suite_identifier }}</li>
-        <li>XPATHs covered: {{ xml_manifestation.xpath_coverage_summary.validation_result.xpath_covered }}</li>
+        <li>XPATHs covered: <b>{{ xpath.results|selectattr("is_covered", "equalto", true)|list|count }}</b></li>
     </ul>
 
     <hr>
 
-    <h2>RDF Manifestation</h2>
-    {% set manifestation = rdf_manifestation %}
-    <p>----------</p>
     <h3>SPARQL Summary</h3>
     <h4>Report details: </h4>
-    <ul>
-        <li class="strong valid">Valid: {{ manifestation.sparql_summary.aggregate.valid }}</li>
-        <li class="strong unverifiable">Unverifiable: {{ manifestation.sparql_summary.aggregate.unverifiable }}</li>
-        <li class="strong warning">Warning: {{ manifestation.sparql_summary.aggregate.warning }}</li>
-        <li class="strong invalid">Invalid: {{ manifestation.sparql_summary.aggregate.invalid }}</li>
-        <li class="strong error">Error: {{ manifestation.sparql_summary.aggregate.error }}</li>
-    </ul>
-        <p>-----</p>
-    <h4>Validation results: </h4>
-     {% for result in rdf_manifestation.sparql_summary.validation_results %}
-     {% set result_total = result.aggregate.valid + result.aggregate.unverifiable + result.aggregate.invalid + result.aggregate.warning + result.aggregate.error %}
-         <p>---</p>
-    <ul>
-        <li>Mapping suite identifier: {{ result.mapping_suite_identifier }}</li>
-        <li>Test suite identifier: {{ result.test_suite_identifier }}</li>
-    </ul>
-    <h5>Results summary</h5>
+    {% set result_valid_count = sparql.summary|map(attribute="result")|map(attribute="valid")|map(attribute="count")|sum %}
+    {% set result_unverifiable_count = sparql.summary|map(attribute="result")|map(attribute="unverifiable")|map(attribute="count")|sum %}
+    {% set result_warning_count = sparql.summary|map(attribute="result")|map(attribute="warning")|map(attribute="count")|sum %}
+    {% set result_invalid_count = sparql.summary|map(attribute="result")|map(attribute="invalid")|map(attribute="count")|sum %}
+    {% set result_error_count = sparql.summary|map(attribute="result")|map(attribute="error")|map(attribute="count")|sum %}
+
+    {% set result_total = result_valid_count + result_unverifiable_count + result_warning_count + result_invalid_count + result_error_count %}
+        <p>---</p>
+
     <table class="display" data-order='[[0, "asc"]]'>
         <thead class="center aligned">
         <tr>
@@ -147,28 +102,28 @@
             {% if result_total > 0 %}
             <tr>
                 <td class="strong valid">Valid</td>
-                <td>{{ result.aggregate.valid }}</td>
-                <td>{{ (result.aggregate.valid / result_total * 100) | round(2) }}%</td>
+                <td>{{ result_valid_count }}</td>
+                <td>{{ (result_valid_count / result_total * 100) | round(2) }}%</td>
             </tr>
             <tr>
                 <td class="strong unverifiable">Unverifiable</td>
-                <td>{{ result.aggregate.unverifiable }}</td>
-                <td>{{ (result.aggregate.unverifiable / result_total * 100) | round(2) }}%</td>
+                <td>{{ result_unverifiable_count }}</td>
+                <td>{{ (result_unverifiable_count / result_total * 100) | round(2) }}%</td>
             </tr>
             <tr>
                 <td class="strong invalid">Invalid</td>
-                <td>{{ result.aggregate.invalid }}</td>
-                <td>{{ (result.aggregate.invalid / result_total * 100) | round(2) }}%</td>
+                <td>{{ result_invalid_count }}</td>
+                <td>{{ (result_invalid_count / result_total * 100) | round(2) }}%</td>
             </tr>
             <tr>
                 <td class="strong warning">Warning</td>
-                <td>{{ result.aggregate.warning }}</td>
-                <td>{{ (result.aggregate.warning / result_total * 100) | round(2) }}%</td>
+                <td>{{ result_warning_count }}</td>
+                <td>{{ (result_warning_count / result_total * 100) | round(2) }}%</td>
             </tr>
             <tr>
                 <td class="strong error">Error</td>
-                <td>{{ result.aggregate.error }}</td>
-                <td>{{ (result.aggregate.error / result_total * 100) | round(2) }}%</td>
+                <td>{{ result_error_count }}</td>
+                <td>{{ (result_error_count / result_total * 100) | round(2) }}%</td>
             </tr>
             {% else %}
             <tr>
@@ -177,26 +132,14 @@
             {% endif %}
         </tbody>
     </table>
-    {% endfor %}
     <p>-------</p>
     <h3>SHACL Summary</h3>
     <h4>Result severity: </h4>
-    <ul>
-        <li>Info: {{ manifestation.shacl_summary.result_severity.aggregate.info }}</li>
-        <li>Warning: {{ manifestation.shacl_summary.result_severity.aggregate.warning }}</li>
-        <li>Violation: {{ manifestation.shacl_summary.result_severity.aggregate.violation }}</li>
-    </ul>
-    <p>-----</p>
-    <h4>Result severity by validation results: </h4>
-    {% for result in rdf_manifestation.shacl_summary.validation_results %}
-    {% set result_severity = result.result_severity.aggregate %}
-    {% set result_total = result_severity.info + result_severity.warning + result_severity.violation %}
+    {% set result_info_count = shacl.summary.results|map(attribute="result")|map(attribute="info")|map(attribute="count")|sum %}
+    {% set result_warning_count = shacl.summary.results|map(attribute="result")|map(attribute="warning")|map(attribute="count")|sum %}
+    {% set result_violation_count = shacl.summary.results|map(attribute="result")|map(attribute="violation")|map(attribute="count")|sum %}
     <p>---</p>
-    <ul>
-        <li>Mapping suite identifier: {{ result.mapping_suite_identifier }}</li>
-        <li>Test suite identifier: {{ result.test_suite_identifier }}</li>
-    </ul>
-    <h5>Results summary</h5>
+    {% set result_total = result_info_count + result_warning_count + result_violation_count %}
         <table class="display">
             <thead class="center aligned">
             <tr>
@@ -209,18 +152,18 @@
                 {% if result_total > 0 %}
                 <tr>
                     <td>Info</td>
-                    <td>{{ result_severity.info }}</td>
-                    <td>{{ (result_severity.info / result_total * 100) | round(2) }}%</td>
+                    <td>{{ result_info_count }}</td>
+                    <td>{{ (result_info_count / result_total * 100) | round(2) }}%</td>
                 </tr>
                 <tr>
                     <td>Warning</td>
-                    <td>{{ result_severity.warning }}</td>
-                    <td>{{ (result_severity.warning / result_total * 100) | round(2) }}%</td>
+                    <td>{{ result_warning_count }}</td>
+                    <td>{{ (result_warning_count / result_total * 100) | round(2) }}%</td>
                 </tr>
                 <tr>
                     <td>Violation</td>
-                    <td>{{ result_severity.violation }}</td>
-                    <td>{{ (result_severity.violation / result_total * 100) | round(2) }}%</td>
+                    <td>{{ result_violation_count }}</td>
+                    <td>{{ (result_violation_count / result_total * 100) | round(2) }}%</td>
                 </tr>
                 {% else %}
                 <tr>
@@ -229,129 +172,8 @@
                 {% endif %}
             </tbody>
         </table>
-    {% endfor %}
     <p>-------</p>
 
-    <hr>
-
-    <h2>Distilled RDF Manifestation</h2>
-    {% set manifestation = distilled_rdf_manifestation %}
-    <p>----------</p>
-    <h3>SPARQL Summary</h3>
-    <h4>Report details: </h4>
-    <ul>
-        <li class="strong valid">Valid: {{ manifestation.sparql_summary.aggregate.valid }}</li>
-        <li class="strong unverifiable">Unverifiable: {{ manifestation.sparql_summary.aggregate.unverifiable }}</li>
-        <li class="strong warning">Warning: {{ manifestation.sparql_summary.aggregate.warning }}</li>
-        <li class="strong invalid">Invalid: {{ manifestation.sparql_summary.aggregate.invalid }}</li>
-        <li class="strong error">Error: {{ manifestation.sparql_summary.aggregate.error }}</li>
-    </ul>
-        <p>-----</p>
-    <h4>Validation results: </h4>
-     {% for result in rdf_manifestation.sparql_summary.validation_results %}
-     {% set result_total = result.aggregate.valid + result.aggregate.unverifiable + result.aggregate.invalid + result.aggregate.warning + result.aggregate.error %}
-         <p>---</p>
-    <ul>
-        <li>Mapping suite identifier: {{ result.mapping_suite_identifier }}</li>
-        <li>Test suite identifier: {{ result.test_suite_identifier }}</li>
-    </ul>
-    <h5>Results summary</h5>
-    <table class="display" data-order='[[0, "asc"]]'>
-        <thead class="center aligned">
-        <tr>
-            <th>Result</th>
-            <th>Count</th>
-            <th>Ratio (%)</th>
-        </tr>
-        </thead>
-        <tbody>
-            {% if result_total > 0 %}
-            <tr>
-                <td class="strong valid">Valid</td>
-                <td>{{ result.aggregate.valid }}</td>
-                <td>{{ (result.aggregate.valid / result_total * 100) | round(2) }}%</td>
-            </tr>
-            <tr>
-                <td class="strong unverifiable">Unverifiable</td>
-                <td>{{ result.aggregate.unverifiable }}</td>
-                <td>{{ (result.aggregate.unverifiable / result_total * 100) | round(2) }}%</td>
-            </tr>
-            <tr>
-                <td class="strong invalid">Invalid</td>
-                <td>{{ result.aggregate.invalid }}</td>
-                <td>{{ (result.aggregate.invalid / result_total * 100) | round(2) }}%</td>
-            </tr>
-            <tr>
-                <td class="strong warning">Warning</td>
-                <td>{{ result.aggregate.warning }}</td>
-                <td>{{ (result.aggregate.warning / result_total * 100) | round(2) }}%</td>
-            </tr>
-            <tr>
-                <td class="strong error">Error</td>
-                <td>{{ result.aggregate.error }}</td>
-                <td>{{ (result.aggregate.error / result_total * 100) | round(2) }}%</td>
-            </tr>
-            {% else %}
-            <tr>
-                <td>No results</td>
-            </tr>
-            {% endif %}
-        </tbody>
-    </table>
-    {% endfor %}
-    <p>-------</p>
-    <h3>SHACL Summary</h3>
-    <h4>Result severity: </h4>
-    <ul>
-        <li>Info: {{ manifestation.shacl_summary.result_severity.aggregate.info }}</li>
-        <li>Warning: {{ manifestation.shacl_summary.result_severity.aggregate.warning }}</li>
-        <li>Violation: {{ manifestation.shacl_summary.result_severity.aggregate.violation }}</li>
-    </ul>
-    <p>-----</p>
-    <h4>Result severity by validation results: </h4>
-    {% for result in rdf_manifestation.shacl_summary.validation_results %}
-    {% set result_severity = result.result_severity.aggregate %}
-    {% set result_total = result_severity.info + result_severity.warning + result_severity.violation %}
-    <p>---</p>
-    <ul>
-        <li>Mapping suite identifier: {{ result.mapping_suite_identifier }}</li>
-        <li>Test suite identifier: {{ result.test_suite_identifier }}</li>
-    </ul>
-    <h5>Results summary</h5>
-        <table class="display">
-            <thead class="center aligned">
-            <tr>
-                <th>Severity</th>
-                <th>Count</th>
-                <th>Ratio (%)</th>
-            </tr>
-            </thead>
-            <tbody>
-                {% if result_total > 0 %}
-                <tr>
-                    <td>Info</td>
-                    <td>{{ result_severity.info }}</td>
-                    <td>{{ (result_severity.info / result_total * 100) | round(2) }}%</td>
-                </tr>
-                <tr>
-                    <td>Warning</td>
-                    <td>{{ result_severity.warning }}</td>
-                    <td>{{ (result_severity.warning / result_total * 100) | round(2) }}%</td>
-                </tr>
-                <tr>
-                    <td>Violation</td>
-                    <td>{{ result_severity.violation }}</td>
-                    <td>{{ (result_severity.violation / result_total * 100) | round(2) }}%</td>
-                </tr>
-                {% else %}
-                <tr>
-                    <td>No results</td>
-                </tr>
-                {% endif %}
-            </tbody>
-        </table>
-    {% endfor %}
-    <p>-------</p>
   </body>
 </html>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
