MWB-669: fix indentation

--- a/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
+++ b/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
@@ -6,14 +6,14 @@
   cursor: pointer;
   color: #990055;
   &:hover{
-    background-color: yellow;
+    background-color: #bbb;
   }
 }
 
 .attr {
   cursor: pointer;
   &:hover{
-    background-color: yellow;
+    background-color: #bbb;
   }
   &-name {
     color: #669900;
