MWB-669: add styles

--- a/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
+++ b/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
@@ -9,6 +9,12 @@
   &:hover{
     background-color: #bbb;
   }
+  &-selected-field {
+    background-color: cornflowerblue;
+  }
+  &-selected-node {
+    background-color: yellow;
+  }
 }
 
 .attr {
