MWB-669: clean code

--- a/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
+++ b/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
@@ -10,10 +10,10 @@
     background-color: #bbb;
   }
   &-selected-field {
-    background-color: cornflowerblue;
+    background-color: yellow;
   }
   &-selected-node {
-    background-color: yellow;
+    background-color: darkseagreen;
   }
 }
 
