MWB-669: finding relative path

--- a/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
+++ b/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
@@ -1,3 +1,7 @@
+.container {
+  overflow: auto;
+}
+
 .text-color {
   color: gray;
 }
@@ -13,7 +17,7 @@
     background-color: yellow;
   }
   &-selected-node {
-    background-color: darkseagreen;
+    background-color: lightgreen;
   }
 }
 
