--- a/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
+++ b/mapping_workbench/frontend/src/sections/app/fields-and-nodes/styles/style.module.scss
@@ -1,44 +1,7 @@
-.container {
-  overflow: auto;
-  resize: vertical;
-  height: 600px;
-}
-
-
-.text-color {
-  color: gray;
-}
-
 .tag {
   cursor: pointer;
-  color: #990055;
-  white-space: nowrap;
   &:hover{
-    background-color: #bbb;
+    background-color: #bbb !important;
   }
-  &-selected-field {
-    background-color: yellow;
-  }
-  &-selected-node {
-    background-color: lightgreen;
-  }
-}
-
-.attr {
-  cursor: pointer;
-  &:hover{
-    background-color: #bbb;
-  }
-  &-name {
-    color: #669900;
-  }
-
-  &-value{
-    color: #0077aa;
-  }
-}
-
-.string-content {
-  color: black;
 }
 
