--- a/mapping_workbench/frontend/src/pages/arrow-buttons.scss
+++ b/mapping_workbench/frontend/src/pages/arrow-buttons.scss
@@ -9,14 +9,15 @@
   position: relative;
   padding-left: 24px;
   padding-right: 24px;
+  background-color: #fff;
   border: 1px solid #101828;
-  border-radius: 0px !important;
+  border-radius: 0 !important;
   border-top-left-radius: 7px !important;
   border-bottom-left-radius: 7px !important;
   margin-right: 1px;
 
   &:hover {
-    background-color: #c9c9c9;
+    background-color: #e5e5e5;
 
   }
 }
